# weather_bot

./: .gitignore  config.py  coordinates.py  exceptions.py  main.py  my_logger.py  pyproject.toml  weather.py  weather_formatter.py  weatherapi_service.py
