[tool.poetry]
name = "my_weather"
version = "0.1.0"
description = ""
authors = ["Andrey <Bakarbyikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
python-telegram-bot = {version = "^20.0a0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
